# shopvac

./: .gitignore  .pre-commit-config.yaml  LICENCE  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/cloud_dir_size/: cli.py  format.py  size.py
src/shopvac/: cli.py  format.py  size.py  store_factory.py
tests/: conftest.py  test_format.py  test_size.py
