[project]
name = "shopvac"
version = "0.1.0"
description = "Get the size of your cloud buckets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arro3-core>=0.6.3",
    "bokeh>=3.8.0",
    "click>=8.2.1",
    "cloudpathlib[azure,gs,s3]>=0.22.0",
    "humanize>=4.13.0",
    "obstore>=0.8.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.5.0",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]


[project.scripts]
shopvac = "shopvac.cli:cli"
