[project]
name = "shopvac"
version = "0.1.0"
description = "CLI to get the size of your cloud buckets"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Raphael Hagen", email = "norlandrhagen@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "arro3-core>=0.6.3",
    "boto3>=1.38.0",
    "click>=8.2.1",
    "humanize>=4.13.0",
    "obstore>=0.9.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "boto3>=1.38.0",
    "ipdb>=0.13.13",
    "ipython>=9.5.0",
    "moto[s3,server]>=5.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.13.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
shopvac = "shopvac.cli:cli"
